--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.2",
 		"react-scripts": "4.0.1",
 		"react-transition-group": "^4.4.1",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
 		"styled-components": "^5.2.1",
 		"styled-transition-group": "^2.0.1",
 		"uuid": "^8.3.2",
